--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_table?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+# --- Nazwê u¿ytkownika podstawiamy swoj¹
+spring.datasource.username=root
+# --- Has³o podstawiamy swoje
+spring.datasource.password=826242
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
+#
+# Konfiguracja JPA/Hibernate
+#
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
+#
+# Kodowanie znaków w po³¹czeniu do bazy danych
+#
+spring.jpa.properties.useUnicode=true
+spring.jpa.properties.characterEncoding=utf8
+spring.jpa.properties.CharSet=utf8
+
+#Spring security
+spring.security.user.name=root
+spring.security.user.password=826242
+spring.security.user.roles=USER
